--- a/plugins/redmine_mtr/config/locales/en.yml
+++ b/plugins/redmine_mtr/config/locales/en.yml
@@ -1,3 +1,8 @@
 # English strings go here for Rails i18n
 en:
   # my_label: "My label"
+  mtr_work_start: "Von"
+  mtr_work_end: "Bis"
+  mtr_break_duration: "Pausendauer"
+
+  mtr_worktime_err_empty: "Ungültige Arbeitszeit"
